Minor adjustments to trigger build

--- a/src/main/resources/templates/subscriptions.html
+++ b/src/main/resources/templates/subscriptions.html
@@ -27,9 +27,11 @@
     <h2><a th:href="@{/subscriptions}">List of Subscriptions</a></h2>
 
     <p>
-        Current active subscriptions from this service towards Ukur to receive push messages on
-        deviations in traffic. Add new ones or look at the push messages received for existing
-        subscriptions. This is a demo service, not intended for real usage - data is not persisted
+        Current active subscriptions from this service to receive push messages on
+        deviations in traffic.
+        <br/>
+        Add new ones or look at the push messages received for existing subscriptions.
+        <br/>This is a demo service, not intended for real usage - data is not persisted
         and lost at restart!
     </p>
 
