--- a/src/main/resources/templates/subscriptions.html
+++ b/src/main/resources/templates/subscriptions.html
@@ -44,13 +44,14 @@
             <th>From stops</th>
             <th>To stops</th>
             <th>LineRefs</th>
-            <th>VehicleRefs</th>
+            <th>Codespace</th>
             <th></th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="s : ${#lists.sort(allSubscriptions)}">
             <td>Subscription id: <span th:text="${s.id}">id</span><br/>
+                type: <span th:text="${s.type}">type</span><br/>
                 push Id: <span th:text="${s.pushId}">pushId</span><br/>
                 <a th:href="@{messages(id=${s.id})}">Messages: <span th:text="${s.numberOfMessages}">0</span></a>
             </td>
@@ -85,7 +86,7 @@
             <td>
                 <table>
                     <tbody>
-                    <tr th:each="row : ${#lists.sort(s.vehicleRefs)}">
+                    <tr th:each="row : ${#lists.sort(s.codespaces)}">
                         <td th:text="${row}">vehicle</td>
                     </tr>
                     </tbody>
@@ -108,11 +109,12 @@
     <p>
         New subscriptions will receive push messages after these rules:
         <ul>
-            <li>ET messages: If a subscription has one 'From stop' and one 'To stop' in correct order in an
-                EstimatedVehicleJourney with delays, the entire EstimatedVehicleJourney is pushed after recorded
-                calls and other estimated calls are removed to minimize the message size.</li>
-            <li>SX messages: If one of the stops from a subscription is affected by a PtSituationElement, the
-                entire PtSituationElement is pushed after affects not regarding the subscription are removed</li>
+            <li>ET messages: If a subscription has one 'From stop' and one 'To stop' affected and in correct order or the journey regards a subscribed LineRef in an
+                EstimatedVehicleJourney with delays/cancellations, the entire EstimatedVehicleJourney is pushed after unsubscribed stops/lines are removed to minimize the message size.
+                Codespaces are not used at the moment for ET messages (but will be used to specify/limit source of the ET messages in the future).</li>
+            <li>SX messages: If one of the stops or line from a subscription is affected by a PtSituationElement, the
+                entire PtSituationElement is pushed after affects not regarding the subscription are removed. If codespace(s) is specified, if not limited by stops/lines,
+                the PtSituationElement is pushed if it comes from that codespace (as indicated by the participantRef).</li>
         </ul>
     </p>
 
@@ -198,22 +200,22 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-2">VehicleRefs</label>
+                <label class="control-label col-sm-2">Codespaces</label>
                 <div class="col-sm-10">
                     <table>
                         <tbody>
-                        <tr th:each="row,rowStat : *{vehicleRefs}">
+                        <tr th:each="row,rowStat : *{codespaces}">
                             <td>
-                                <input readonly="readonly" type="text" th:field="*{vehicleRefs[__${rowStat.index}__]}"/>
+                                <input readonly="readonly" type="text" th:field="*{codespaces[__${rowStat.index}__]}"/>
                             </td>
                             <td>
-                                <button type="submit" name="removeVehicleRef" th:value="${rowStat.index}" class="btn btn-default">Remove VehicleRef</button>
+                                <button type="submit" name="removeCodespace" th:value="${rowStat.index}" class="btn btn-default">Remove Codespace</button>
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="text" name="vehicleref_value"/></td>
+                            <td><input type="text" name="codespace_value"/></td>
                             <td>
-                                <button type="submit" name="addVehicleRef" class="btn btn-default">Add VehicleRef</button>
+                                <button type="submit" name="addCodespace" class="btn btn-default">Add Codespace</button>
                             </td>
                         </tr>
                         </tbody>
@@ -228,6 +230,7 @@
             </div>
         </fieldset>
     </form>
+    <a th:href="@{subscriptions}">Refresh page</a>
 </div>
 
 </body>
