Use prettyprint correct in xml/json views. Removed duplicated xml comment.

--- a/src/main/resources/templates/subscriptions.html
+++ b/src/main/resources/templates/subscriptions.html
@@ -110,7 +110,7 @@
                                 <h4 class="modal-title">XML representation of subscription</h4>
                             </div>
                             <div class="modal-body">
-                                <pre lang="xml"><span th:text="${s.toXML()}">xml content</span></pre>
+                                <pre class="prettyprint lang-xml"><span th:text="${s.toXML()}">xml content</span></pre>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -129,7 +129,7 @@
                                 <h4 class="modal-title">JSON representation of subscription</h4>
                             </div>
                             <div class="modal-body">
-                                <pre lang="xml"><span th:text="${s.toJSON()}">json content</span></pre>
+                                <pre class="prettyprint lang-json"><span th:text="${s.toJSON()}">json content</span></pre>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
