Added build version in subscription page

--- a/src/main/resources/templates/subscriptions.html
+++ b/src/main/resources/templates/subscriptions.html
@@ -320,6 +320,6 @@
     </form>
     <a th:href="@{subscriptions}">Refresh page</a>
 </div>
-
+<h4>Build version: <span th:utext="${buildVersion}">Description</span></h4>
 </body>
 </html>
