alling center build number

--- a/src/main/resources/templates/subscriptions.html
+++ b/src/main/resources/templates/subscriptions.html
@@ -320,6 +320,6 @@
     </form>
     <a th:href="@{subscriptions}">Refresh page</a>
 </div>
-<div align="center"><h6>Build version: <span th:utext="${buildVersion}">Description</span></h6></div>
+<div align="center"><h6><span th:utext="${buildVersion}">Description</span></h6></div>
 </body>
 </html>
