--- a/src/main/resources/templates/subscriptions.html
+++ b/src/main/resources/templates/subscriptions.html
@@ -309,6 +309,16 @@
                     </p>
                 </div>
 
+        </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2">Maximum arrival delay duration </label>
+                <div class="col-sm-10">
+                    <p>
+                        <input type="text" th:field="*{maxArrivalDelay}" th:errorclass="fieldError"/>
+                        Must follow the <a href="https://www.w3schools.com/xml/schema_dtypes_date.asp">W3C XML Schema 1.0 Duration format</a>. Ex PT30M send push message if arrival is delayed more 30th minute.
+                    </p>
+                </div>
+
             </div>
 
             <div class="form-group">
